--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.error.include-stacktrace=never
 
 jwt.secret=aXNzIjoiTnViZWNrIiwiZXhwIjoxNjgzNjQ0OD
+
+spring.profiles.active=open
